<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitalsystem.IndividualData" >

    <TextView
        android:id="@+id/individualTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/IndividualData"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/individualTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/individualTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/notFunctional"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/individualTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/individualTextView4"
        android:layout_below="@+id/individualTextView2"
        android:layout_marginTop="43dp"
        android:text="@string/NameColon"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/individualTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/individualTextView3"
        android:text="@string/DOBColon"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/individualTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/individualTextView4"
        android:layout_below="@+id/individualTextView4"
        android:text="@string/HCNColon"
        android:textSize="15sp" />

    <Button
        android:id="@+id/ViewPrevRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/individualTextView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/ViewPreviousRecords" />

    <Button
        android:id="@+id/UpdateRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ViewPrevRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/UpdateRecord" />

</RelativeLayout>