<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitalsystem.CreateNewRecord" >

    <TextView
        android:id="@+id/newRecordTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="23dp"
        android:text="@string/CreateANewVitalSigns"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newRecordEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newRecordEditText3"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/addDiastolicPressure"
        android:inputType="number" />

    <EditText
        android:id="@+id/newRecordEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newRecordEditText1"
        android:layout_below="@+id/newRecordEditText1"
        android:ems="10"
        android:hint="@string/addHeartRate"
        android:inputType="number" />

    <EditText
        android:id="@+id/newRecordEditText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newRecordEditText1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/addSystolicPressure"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newRecordEditText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newRecordEditText3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/addTemperature"
        android:inputType="number" />

    <Button
        android:id="@+id/newRecordButton1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/newRecordEditText2"
        android:layout_below="@+id/newRecordEditText2"
        android:layout_marginTop="39dp"
        android:text="@string/Save" />

    <EditText
        android:id="@+id/newRecordEditText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newRecordEditText4"
        android:layout_alignLeft="@+id/newRecordEditText4"
        android:ems="10" 
        android:text="@string/notFunctionaltime" />

</RelativeLayout>